refactor: move source files to the root directory and update paths in config
kiel@localhost ~/stage/flow/cyto-plot $ uv run main.py
/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/numba/np/ufunc/dufunc.py:344: NumbaWarning: Compilation requested for previously compiled argument types ((uint32,)). This has no effect and perhaps indicates a bug in the calling code (compiling a ufunc more than once for the same signature
  warnings.warn(msg, errors.NumbaWarning)
/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/numba/np/ufunc/dufunc.py:344: NumbaWarning: Compilation requested for previously compiled argument types ((uint32,)). This has no effect and perhaps indicates a bug in the calling code (compiling a ufunc more than once for the same signature
  warnings.warn(msg, errors.NumbaWarning)
/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/numba/np/ufunc/dufunc.py:344: NumbaWarning: Compilation requested for previously compiled argument types ((uint32,)). This has no effect and perhaps indicates a bug in the calling code (compiling a ufunc more than once for the same signature
  warnings.warn(msg, errors.NumbaWarning)
--- Starting Cytometry Analysis Pipeline ---
Loading .fcs files from 'data/fcs/'...
Error: No .fcs files found in directory: data/fcs/

--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -2,7 +2,7 @@
 # Project Paths
 # ------------------
 paths:
-  fcs_data_dir: "data/fcs/"
+  fcs_data_dir: "../data/fcs/"
   cache_dir: "cache/"
   output_dir: "output/"
   plot_filename: "interactive_umap_plot.html"
