feat: add logging functionality and configuration files for improved error handling and debugging
Refactor the logging code to be more professional. I want to log to the console and into file. Logs shall have a isoformatted UTC timestamp (followed by timezone) Console output shall be colored according to log level. Log messages shall have appropriate log levels.

                     ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.13/logging/__init__.py", line 651, in formatTime
    s = time.strftime(datefmt, ct)
TypeError: Tuple or struct_time argument required
Call stack:
  File "/home/kiel/stage/flow/cyto-plot/main.py", line 61, in <module>
    main_pipeline()
  File "/home/kiel/stage/flow/cyto-plot/main.py", line 47, in main_pipeline
    embedding = analysis.run_gpu_umap(umap_data, cfg.umap_params, joblib_memory)
  File "/home/kiel/stage/flow/cyto-plot/analysis.py", line 27, in run_gpu_umap
    return _cached_umap(data, **vars(umap_params))
  File "/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/joblib/memory.py", line 607, in __call__
    return self._cached_call(args, kwargs, shelving=False)[0]
  File "/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/joblib/memory.py", line 562, in _cached_call
    return self._call(call_id, args, kwargs, shelving)
  File "/home/kiel/stage/flow/cyto-plot/.venv/lib/python3.13/site-packages/joblib/memory.py", line 832, in _call
    output = self.func(*args, **kwargs)
  File "/home/kiel/stage/flow/cyto-plot/analysis.py", line 15, in _cached_umap
    logger.info(f"Data shape for UMAP: {gpu_data.shape}")
Message: 'Data shape for UMAP: (513255, 18)'
Arguments: ()
--- Logging error ---
Traceback (most recent call last):
  File "/usr/lib/python3.13/logging/__init__.py", line 1151, in emit
    msg = self.format(record)
  File "/usr/lib/python3.13/logging/__init__.py", line 999, in format
    return fmt.format(record)
           ~~~~~~~~~~^^^^^^^^
  File "/home/kiel/stage/flow/cyto-plo

--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -8,6 +8,13 @@ paths:
   plot_filename: "interactive_umap_plot.html"
 
 # ------------------
+# Logging Configuration
+# ------------------
+logging:
+  level: "INFO"  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+  log_file: "cyto-plot.log"
+
+# ------------------
 # Data Processing Settings
 # ------------------
 data_processing:
