--- a/cyto-plot/pyproject.toml
+++ b/cyto-plot/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "bokeh>=3.7.3",
+    "colorama>=0.4.6",
     "cudf-cu12>=25.8.0",
     "cuml-cu12>=25.8.0",
     "joblib>=1.5.1",
