--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -18,6 +18,8 @@ logging:
 # Data Processing Settings
 # ------------------
 data_processing:
+  # Max events to load per file. Set to -1 to load all events.
+  max_events_per_file: 1000
   # Columns to exclude from UMAP analysis.
   # 'filename' is added during loading for labeling purposes.
   exclude_columns:
@@ -29,8 +31,6 @@ data_processing:
 # See cuML and umap-learn docs for details
 # ------------------
 umap_params:
-  #init: "random"
-  n_neighbors: 10
-  min_dist: 0.1
+  n_neighbors: 30
+  min_dist: 0.7
   n_components: 2
-  #n_epochs: 500
