feat: enhance interactive plot with percentile and margin parameters
For more than 6000 points the UMAP is always noisy. In order to still have a good plot, define the extends such that we see a rectangle containing 99% of all points (in both directions) + 10% increase. add the parameters (99, 10) to config.yml

--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -47,3 +47,12 @@ umap_params_visualization:
 dbscan_params:
   eps: 0.4 # Neighborhood of a point, Higher eps for larger clusters
   min_samples: 100 # Higher min_samples for more robust clusters
+
+# ------------------
+# Plotting Settings
+# ------------------
+plot_settings:
+  # The percentile of data to include in the initial view of the plot.
+  percentile: 99
+  # The percentage of margin to add around the core data view.
+  margin_percent: 10
