--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -19,7 +19,9 @@ logging:
 # ------------------
 data_processing:
   # Max events to load per file. Set to -1 to load all events.
-  max_events_per_file: 6_200 # For more than 6000 points the UMAP is always noisy
+  max_events_per_file: 7_200 # For more than 6000 points the UMAP is always noisy
+  # Number of events to use for UMAP training. -1 to use all events.
+  umap_train_size: -1 # 4_000
   # Columns to exclude from UMAP analysis.
   # 'filename' is added during loading for labeling purposes.
   exclude_columns:
@@ -36,6 +38,8 @@ umap_params_clustering:
   n_components: 3 # Higher dimension for clustering
 
 umap_params_visualization:
+  #init: "random" # Default: 'spectral' uses fuzzy 1-skeleton
+  n_epochs: 10_000 # More epochs for better convergence, Default: None uses 200 for large, 500 for small
   n_neighbors: 30 # Higher n_neighbors for better global structure
   min_dist: 0.1 # Higher min_dist for better separation
   n_components: 2 # 2D for plotting
