--- a/cyto-plot/config.yml
+++ b/cyto-plot/config.yml
@@ -19,49 +19,57 @@ logging:
 # ------------------
 data_processing:
   # Max events to load per file. Set to -1 to load all events.
-  max_events_per_file: -1 # For more than 6000 points the UMAP is always noisy
+  max_events_per_file: 18_000
   # Number of events to use for UMAP training. -1 to use all events.
-  umap_train_size: -1 # 4_000
+  umap_train_size: 30_000 # 4_000
   # Columns to exclude from UMAP analysis.
   # 'filename' is added during loading for labeling purposes.
   exclude_columns:
     - "Time"
     - "filename"
 
+
+
+umap_params_visualization:
+  #init: "random" # Default: 'spectral' uses fuzzy 1-skeleton
+  # learning_rate: 1.0 # Default: 1.0, Higher for faster convergence
+  #n_epochs: 400 # More epochs for better convergence, Default: None uses 200 for large, 500 for small
+  n_neighbors: 600 # Higher n_neighbors for better global structure
+  min_dist: 0.2 # Higher min_dist for better separation, should be relative to spread
+  # spread: 1.0 # Higher spread for better separation, should be relative to min_dist
+  #verbose: True # Default: False, True for more output
+  build_algo: "brute_force_knn" # "brute_force_knn", Default: "nn_descent" for >= 50k rows
+  n_components: 2 # 2D for plotting
+  metric: "euclidean" # Default: "euclidean"
+
+
 # ------------------
 # UMAP Algorithm Parameters
 # See cuML and umap-learn docs for details
 # ------------------
 umap_params_clustering:
-  n_neighbors: 30
+  n_neighbors: 300
   min_dist: 0.1
+  metric: "euclidean" # Default: "euclidean"
   build_algo: "brute_force_knn" # "nn_descent" doesn't seem to work
-  n_components: 3 # Higher dimension for clustering
-
-umap_params_visualization:
-  #init: "random" # Default: 'spectral' uses fuzzy 1-skeleton
-  # learning_rate: 1.0 # Default: 1.0, Higher for faster convergence
-  n_epochs: 400 # More epochs for better convergence, Default: None uses 200 for large, 500 for small
-  n_neighbors: 30 # Higher n_neighbors for better global structure
-  min_dist: 0.1 # Higher min_dist for better separation, should be relative to spread
-  # spread: 1.0 # Higher spread for better separation, should be relative to min_dist
-  verbose: True # Default: False, True for more output
-  build_algo: "brute_force_knn" # "brute_force_knn", Default: "nn_descent" for >= 50k rows
-  n_components: 2 # 2D for plotting
+  n_components: 4 # Higher dimension for clustering
 
 # ------------------
 # DBSCAN Clustering Parameters
 # See cuML docs for details
 # ------------------
 dbscan_params:
-  eps: 0.4 # Neighborhood of a point, Higher eps for larger clusters
-  min_samples: 100 # Higher min_samples for more robust clusters
+  eps: 0.2 # Neighborhood of a point, Higher eps for larger clusters
+  #verbose: True
+  min_samples: 120 # Higher min_samples for more robust clusters
 
 # ------------------
 # Plotting Settings
 # ------------------
 plot_settings:
   # The percentile of data to include in the initial view of the plot.
-  percentile: 90 # Reduce to exclude more outliers
+  percentile: 99 # Reduce to exclude more outliers
   # The percentage of margin to add around the core data view.
-  margin_percent: 30 # Increase to include more outside points
+  margin_percent: 10 # Increase to include more outside points
+  point_size: 1 # Size of points in the plot
+  point_alpha: .2 # Transparency of points in the plot
